
2009-06-16	Sergey S. Sergeev

	* core/Form/Primitive.class.php, core/OSQL/DataType.class.php,
	main/Base/LightMetaProperty.class.php, test/misc/DAOTest.class.php,
	core/Form/Primitives/PrimitiveHstore.class.php, 
	core/Logic/HstoreExpression.class.php, test/core/PrimitiveHstoreTest.class.php, 
	meta/types/PgHstoreType.class.php: new internal type implemented.

2009-05-14	Ivan Y. Khvostishkov

	* main/Utils/DaoSynchronizer.class.php: flexible master-slave data
	transformation and replication tool.

2009-05-13	Ivan Y. Khvostishkov

	* main/EntityProto/Builders/DirectoryToObjectBinder.class.php: fixed
	bug related to symlinks reading, unit test provided, crush test spotted
	by Deinis M. Gabaidulin. 

2009-05-12	Ivan Y. Khvostishkov

	* core/Base/Assert.class.php: methodExists() assert.

2009-05-08	Ivan Y. Khvostishkov

	* main/Utils/DaoIterator.class.php: foreach() iterator through the DAO
	would be useful.

2009-04-30	Ivan Y. Khvostishkov

	* main/Math/MathUtils.class.php: randomNormalStd(): generation of
	random normal deviates.

2009-04-27	Denis M. Gabaidulin

	* main/Charts/Google/GoogleChartData.class.php: getCount() added.

2009-04-25	Vladlen Y. Koshelev

	* core/Logic/InExpression.class.php: MappableObject support added.

2009-04-23	Denis M. Gabaidulin

	* main/Charts/Google/: experimental support for Data point labels API.

2009-04-20	Denis M. Gabaidulin

	* main/Math/MathUtils.class.php: makeCartesianProduct() support
	assoc arrays.

2009-04-17	Denis M. Gabaidulin

	* main/Utils/SortHelper.class.php: customizable cmp function.

2009-04-16	Sergey S. Sergeev

	* test/misc/ServerVarUtils.class.php: forgotten class added, thanks to
	Ivan Khvostishkov.

2009-04-16	Vladlen Y. Koshelev

	* core/OSQL/OrderBy.class.php, test/main/CriteriaTest.class.php:
	nullsLast(), isNullsFirst() fixed; support for clone and toMapped() for
	nulls ordering feature added; corresponding tests added.

2009-04-08	Denis M. Gabaidulin
