@@ -1,4 +1,8 @@
 
+2009-06-22 Denis M. Gabaidulin
+
+* main/Utils/TypesUtils.class.php added.
+
 2009-06-16	Sergey S. Sergeev
 
 	* core/Form/Primitive.class.php, core/OSQL/DataType.class.php,
